--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,12 +18,12 @@ spring:
     initialization-mode: always
   ### スネークケースのDBカラム名をSpringのEntity側ではキャメルケースとして対応付けてくれる。
   mybatis:
-    config-location: classpath:/mybatis/mybatis-config.xml
-#    configuration:
-#      map-underscore-to-camel-case: true
+#    config-location: classpath:/mybatis/mybatis-config.xml
+    configuration:
+      map-underscore-to-camel-case: true
 
-    mapper-locations:
-      classpath*:com/example/demo/dao/*.xml:
+#    mapper-locations:
+#      classpath*:com/example/demo/dao/*.xml:
   jpa:
     properties:
       hibernate:
