--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,8 +1,38 @@
-version: '3.8'
+version: "3.8"
+
+x-template: &flyway-template
+  build: ./flyway
+  volumes:
+    - ./flyway/sql:/flyway/sql
+    - ./flyway/conf:/flyway/conf
+  depends_on:
+    - db
+  profiles:
+    - flyway
 volumes:
   mysql-db:
     driver: local
 services:
+  flyway-baseline:
+    <<: *flyway-template
+    command: baseline
+
+  flyway-clean:
+    <<: *flyway-template
+    command: clean
+
+  flyway-migrate:
+    <<: *flyway-template
+    command: migrate
+
+  flyway-info:
+    <<: *flyway-template
+    command: info
+
+  flyway-repair:
+    <<: *flyway-template
+    command: repair
+
   db:
     build: ./mysql
     image: demo-db:0.0.1
@@ -20,10 +50,10 @@ services:
     ports:
       - 3306:3306
     environment:
-      MYSQL_DATABASE: demo_db
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
-      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
   app:
     build: ./java
     image: demo-app:0.0.1
