--- a/docker/flyway/conf/flyway.conf
+++ b/docker/flyway/conf/flyway.conf
@@ -1,4 +1,4 @@
-flyway.url=jdbc:mysql://db/demo_db
-# 実行時に記載
+# 実行時にコマンド入力
+# flyway.url=jdbc:mysql://db/demo_db
 # flyway.user=XXXXX
 # flyway.password=XXXXX
