--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -35,6 +35,14 @@ services:
 
   db:
     build: ./mysql
+    env_file:                                        # 環境変数
+      - ./environments/common.env                     # 各コンテナ共通
+      - ./environments/db.env                         # DB接続用MySQL関連
+    # environment:
+    #      MYSQL_DATABASE: ${MYSQL_DATABASE}
+    #      MYSQL_USER: ${MYSQL_USER}
+    #      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    #      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     image: demo-db:0.0.1
     # コンテナ名を明示的に指定する
     container_name: db-container
@@ -49,11 +57,6 @@ services:
       - 3306
     ports:
       - 3306:3306
-    environment:
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
   app:
     build: ./java
     image: demo-app:0.0.1
@@ -69,3 +72,16 @@ services:
     depends_on:
       - db
     command: ./gradlew clean bootRun
+  web:
+    build: ./nginx                          # Dockerファイルのパス
+    env_file:                                       # 環境変数
+      - ./environments/common.env                    # 各コンテナ共通
+    # image: nginx:latest
+    # コンテナ名を明示的に指定する
+    container_name: web-container
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    links:
+      - app
